--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   },
   "scripts": {
     "start": "cds-serve"
+  },
+  "cds": {
+    "requires": {
+      "Northwind": {
+        "kind": "odata",
+        "model": "srv/external/Northwind",
+        "[backend]": {
+          "credentials": {
+            "url": "https://services.odata.org/Experimental/OData/OData.svc"
+          }
+        }
+      }
+    }
   }
 }
