--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@sap-cloud-sdk/http-client": "^3.9.0",
+    "@sap-cloud-sdk/resilience": "^3.9.0",
     "@sap/cds": "^7",
     "express": "^4"
   },
