--- a/mta.yaml
+++ b/mta.yaml
@@ -1,4 +1,3 @@
----
 _schema-version: '3.1'
 ID: app
 version: 1.0.0
@@ -22,4 +21,16 @@ modules:
       - name: srv-api # required by consumers of CAP services (e.g. approuter)
         properties:
           srv-url: ${default-url}
-    requires: []
+    requires:
+      - name: app-auth
+
+resources:
+  - name: app-auth
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: xsuaa
+      service-plan: application
+      path: ./xs-security.json
+      config:
+        xsappname: app-${org}-${space}
+        tenant-mode: dedicated
