--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
         "kind": "odata",
         "model": "srv/external/Northwind",
         "[backend]": {
-          "credentials": {           
-            "url":"https://services.odata.org/Experimental/OData/OData.svc"       
+          "credentials": {  
+            "destination":"Northwind_Mapletree"         
+                   
             }
         },
         "uaa": {
